--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "react": "^19",
+    "react-countup": "^6.5.3",
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
@@ -57,6 +58,7 @@
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vader-sentiment": "^1.1.3",
     "vaul": "latest",
     "zod": "^3.24.1"
   },
